# Dino

./: .gitignore  LICENSE  README.md  license  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run_linter.yml  run_tests.yml
src/: config.py  counter.py  dino.py  main.py  obstacles.py  recources.py  recourses.py
tests/: test_config.py  test_counter.py  test_dino.py  test_obstacles.py  test_recourses.py
