[project]
name = "dino"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Paul Jonas Dohle", email = "paul.jonas@dohle-net.de" },
    { name = "Eric De Angelis", email = "eric.de.angelis@eugymwa.de" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]
dependencies = ["pygame==2.6.1"]

[project.optional-dependencies]
lint = [
    "black==24.10.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
]

[project.urls]
Repository = "https://github.com/RedLion8399/Dino"
Issues = "https://github.com/RedLion8399/Dino/issues"
Documentation = "https://github.com/RedLion8399/Dino/wiki"
